--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/*.test.*"]
+  "exclude": ["node_modules", "src/test/*"]
 }
