--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "relational-reducer",
-  "version": "0.0.0",
-  "description": "",
-  "files": [
-    "/dist/"
-  ],
+  "version": "0.1.0",
+  "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "jest --watchAll",
-    "build": "tsc"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build"
   },
-  "author": "",
-  "license": "ISC",
+  "peerDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "normalized-reducer",
+  "author": "Briet Sparks",
+  "module": "dist/normalized-reducer.esm.js",
   "devDependencies": {
-    "@types/jest": "^24.0.24",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.3"
+    "@types/jest": "^25.1.0",
+    "husky": "^4.2.1",
+    "tsdx": "^0.12.3",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.5"
   }
 }
