--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsdx build",
     "test": "tsdx test --watch",
     "lint": "tsdx lint",
+    "lint:fix": "tsdx lint --fix",
     "prepare": "tsdx build"
   },
   "peerDependencies": {},
