exclude test cases from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": ["src", "types"],
+  "exclude": ["./src/test-cases.ts"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
