--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --watch",
+    "test:coverage": "tsdx test --coverage",
+    "test:coveralls": "tsdx test --coverage && coveralls < coverage/lcov.info",
     "lint": "tsdx lint",
     "lint:fix": "tsdx lint --fix",
     "prepare": "tsdx build"
@@ -35,6 +37,7 @@
   "module": "dist/normalized-reducer.esm.js",
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "coveralls": "^3.0.11",
     "husky": "^4.2.3",
     "tsdx": "^0.13.1",
     "tslib": "^1.11.1",
