--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "^25.1.4",
     "coveralls": "^3.0.11",
     "husky": "^4.2.3",
+    "normalizr": "^3.6.0",
     "tsdx": "^0.13.1",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
